--- a/WorldGames/build.gradle
+++ b/WorldGames/build.gradle
@@ -18,7 +18,7 @@ android {
 
     defaultConfig {
         applicationId "com.testtask.xyrality.worldgames"
-        minSdkVersion 13
+        minSdkVersion 14
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
@@ -34,5 +34,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+    compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
+    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
+    compile 'com.google.code.gson:gson:2.2.4'
+
 }
